--- a/Report/1.What_is.md
+++ b/Report/1.What_is.md
@@ -78,3 +78,12 @@ VO vo = JSON.parseObject("{...}", VO.class); //反序列化
 
 支持泛型，支持流处理超大文本，支持枚举，支持序列化和反序列化扩展。
 
+
+
+### fastjson设计简要分析与建模
+
+#### JSON to Object
+
+
+
+#### Object to JSON
