--- a/Report/2.Initial.md
+++ b/Report/2.Initial.md
@@ -301,8 +301,44 @@ toJSONString(Object object, int defaultFeatures, SerializerFeature... features) 
 write方法中生成了一个Class<?>类型的clazz，这一用法之前我没有见过。查找[资料](https://stackoverflow.com/questions/9921676/what-does-class-mean-in-java)发现，Class包含了一个类所必须的信息，而<?>则表明该类没有指定类型。
 
 从而我们可以看出，实际上fastjson首先将object转化为一个类，然后再利用类的信息辅助生成json相关结构。
+
+此处的getObjectWriter方法调用树又很复杂，既然我们已经详细分析了JSON到Object的过程，此处现在就不再继续向下深究了。
+
 接下来的try-catch内调用了ObjectSerializer类的write方法，其定义在serializer/ObjectSerializer.java中，但此处并没有给出相应的实现。向上一看，啊哈，原来这个ObjectSerializer是一个interface，默认情况下interface中的方法都是抽象而不含具体实现的。
 
 不过这样也给我们带来了问题，方法的追踪线索就这么断了？
 
-事实上当然不会。在SerializaWrite.java中不难找到，
+事实上当然不会。在SerializeWriter.java中不难发现，SerializeWriter类继承了Writer接口而且实现了write方法！
+
+```java
+    public void write(String str, int off, int len) {
+        int newcount = count + len;
+        if (newcount > buf.length) {
+            if (writer == null) {
+                expandCapacity(newcount);
+            } else {
+                do {
+                    int rest = buf.length - count;
+                    str.getChars(off, off + rest, buf, count);
+                    count = buf.length;
+                    flush();
+                    len -= rest;
+                    off += rest;
+                } while (len > buf.length);
+                newcount = len;
+            }
+        }
+        str.getChars(off, off + len, buf, count);
+        count = newcount;
+    }
+```
+
+一个简单的将字符串写入buffer的方法。
+
+### 总结
+
+到这里为止，如果我们不深究细节和算法，fastjson的面貌已经基本呈现在我们面前。从上面的代码设计中可以看出，呈现给用户或可以有效且有必要高度抽象的对象都呈现为抽象类甚至接口的形式，而接口、抽象类、普通类之间的层层继承也充分反应了fastjson设计者对于功能主次、性能高低的良好把握。在每个用于解析较为复杂的对象的类中，往往会相应设计一个对应的Config类以记录其配置信息而非将配置与算法混杂在一起。这充分体现了面向对象的解耦思想。
+
+通过本部分的代码阅读分析我感受到，相较于操作系统、体系结构等课程中常见的面向过程思想，面向对象编程思想在面对复杂度爆炸性增长的软件系统时的游刃有余。面向过程思想编写出的程序或许也可以用于实现面向对象思想设计的复杂系统，但永远不会如面向对象思想设计的系统这般易于维护。面向对象的抽象与封装，是其易于书写、易于维护的绝招！
+
+下一部分（也就是第三次报告）我将会分析其高级设计意图。
