--- a/Report/1.What_is.md
+++ b/Report/1.What_is.md
@@ -78,12 +78,29 @@ VO vo = JSON.parseObject("{...}", VO.class); //反序列化
 
 支持泛型，支持流处理超大文本，支持枚举，支持序列化和反序列化扩展。
 
-
-
 ### fastjson设计简要分析与建模
 
-#### JSON to Object
+#### JSON to Object(反序列化)
+
+功能为将JSON格式字符串转化为等价Java Object。
+
+##### 正常流程：
+
+1. 读取用户选择使用的特性
+2. 实例化对应的Parser、Lexer
+3. 调用Parser、Lexer提供的方法将JSON格式字符串转化为Object
+
+##### 异常处理1：字符串为null
+场景: 任何调用反序列化方法的执行流
+用例描述：终止执行并抛出异常，由上级调用者处理
+约束和限制：在判断字符串合法性前不试图访问字符串中任何内容。
+
+##### 异常处理2:字符串不合法
+场景：任何通过了异常处理1的执行流
+用例描述：终止解析并抛出异常，由上级调用者递归处理异常
+约束和限制：在完成解析前不向Object中返回部分解析的内容
 
 
+#### Object to JSON（序列化）
 
-#### Object to JSON
+功能为将Java Object转化为等价JSON格式字符串。
