--- a/Report/3.Design Pattern.md
+++ b/Report/3.Design Pattern.md
@@ -38,6 +38,8 @@ public abstract class JSON implements JSONStreamAware, JSONAware {
 正如《设计模式：可复用面向对象软件的基础》中指出，对一些类来说，只有一个实例是很重要的。“虽然系统中可以有许多打印机，但却只应该有一个打印假脱机，只应该有一个文件系统和一个窗口管理器”。在fastjson里，我们可以说，虽然系统中可以有许多需处理的json字符串，但却只应该有一个parser和一个配置存储器。
 对这些实例而言，仅有一个实例并不会让系统缺少必要的灵活性或让速度减慢多少，但多个实例却会让系统变得复杂而不可预期。
 
+当然，这里需要指出，虽然fastjson中基本上遵循了Singleton模式，但其各个类中并没有对实例数量做硬性限制，或许是基于整个系统的可扩展性考虑？
+
 ### 桥接-对象结构型模式
 
 《设计模式：可复用面向对象软件的基础》中指出，这一设计模式的意图是将抽象部分和它的实现部分分离，使他们都可以独立地变化。
@@ -162,3 +164,8 @@ public class IdentityHashMap<K, V> {
 }
 // 可见此处全程无锁操作，且支持并发
 ```
+
+
+### 小结
+
+上面提到了各式的软件设计模式思想，从本质上说，其目的都是为了更高效地编写维护软件，在实现思路上都或多或少与抽象、封装相联系，可以说，抽象封装，是面向对象思想对软件工程发展的最大贡献。
