--- a/Report/4.summary.md
+++ b/Report/4.summary.md
@@ -4,4 +4,8 @@
 
 从fastjson中，我粗略了解了一个高效又有着良好代码层次结构的开源项目的整体结构，了解了JSON格式的规定与具体实现，甚至学会了点简单的java语言。而从与本课程结合更紧密的方向说，我在fastjson中看到了老师上课时提到的一个个面向对象思想的具体方面在真实工程中的真实应用，看到了真实工程中良好的抽象封装思想与对效率的追求有机结合的成果。
 
-阅读fastjson的代码到现在，可以说，fastjson依赖面向对象思想，充分解耦复杂功能为一个个相对独立的类，实现了良好的可维护性与高执行效率兼得的效果。
+阅读fastjson的代码到现在，可以说，fastjson依赖面向对象思想，充分解耦复杂功能为一个个相对独立的类，保证良好的可维护性与高执行效率兼得。从GitHub的统计信息中也可以看到，fastjson接收了很多来自社区的更新，应用于数目繁多的项目，这就是它可维护性与高效率的最好表征。
+
+模板与泛型设计可以说是Java、C++等语言中能够有效提高效率避免重复造轮子的关键一步，fastjson也提供了相应的支持。比较遗憾的是考试周临近，相关实现本次没有时间看了。:(
+
+这堂课给了我一个接触计算机的偏上层应用的机会。之前的课程从数字电路、组成原理、体系结构、操作系统一路展开，为我揭示了计算机的工作原理。而这门课，则为我呈现出计算机所能支持的应用与由此产生的软件设计思想，极为难得。
